--- a/css/reader.css
+++ b/css/reader.css
@@ -8,7 +8,7 @@ All right reserved*/
     background-color: #aaa;
 }
 ::-webkit-scrollbar-thumb:hover{
-    background-color: #eee;
+    background-color: #ccc;
 }
 ::-webkit-scrollbar-track-piece {
     background-color: #eee;
@@ -17,16 +17,40 @@ All right reserved*/
 body{
     padding: 0;
     margin: 0;
-    background: url(images/itembg.png) #f0f0f0;
+    background: #fff;
     width: 100%;
     height: 100%;
     position: absolute;
+    font: 16px/1.5 Tahoma, Arial, "\5b8b\4f53", sans-serif;
+}
+.title{
+    font-size: 20px;
+    font-weight: bold;
+    margin: 0 0 12px 0;
 }
 .header{
     background: url(images/header.png) repeat-x;
     height: 38px;
 }
 .content-wrap{
-    width: 980px;
+    width: 680px;
     margin: 0 auto;
+}
+.article{
+    padding-bottom: 100px;
+    word-wrap: break-word;
+    word-break:break-all;
+}
+.superaddcontent{
+    margin-top: 20px;
+    font-size: 14px;
+}
+.superaddcontent .stitle{
+    font-size: 11px;
+    font-family: tahoma;
+    -webkit-text-size-adjust: none;
+    padding: 2px 4px;
+    background-color: #f7f7f7;
+    border-radius: 3px;
+    margin: 36px 0 12px;
 }
