--- a/css/web.page.css
+++ b/css/web.page.css
@@ -1,19 +1,40 @@
 ﻿/*@huntbao
 All right reserved*/
-.jizhureader-hidden{
-    overflow: hidden !important;
-    overflow-x: hidden !important;
-    overflow-y: hidden !important;
-    position: static !important;
-}
 #jizhureader-iframe{
     margin: 0;
     padding: 0;
-    border: none;
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
-    left: 0;
+    left: -100%;
     z-index: 2147483647 !important;
+}
+html.jizhureader-beforereader,
+html > body.jizhureader-beforereader,
+body.jizhureader-beforereader {
+    position: static !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    border: 0 !important;
+}
+html.jizhureader-reader,
+html > body.jizhureader-reader,
+body.jizhureader-reader {
+    overflow: hidden !important;
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
+}
+body.jizhureader-beforereader object,
+body.jizhureader-beforereader embed,
+body.jizhureader-beforereader iframe {
+    visibility: hidden !important;
+}
+html.jizhureader-beforereader #jizhureader-iframe,
+html > body.jizhureader-beforereader #jizhureader-iframe,
+body.jizhureader-beforereader #jizhureader-iframe,
+#jizhureader-iframe {
+    display: block !important;
+    overflow: auto !important;
+    visibility: visible !important;
 } 
