--- a/css/reader.css
+++ b/css/reader.css
@@ -21,12 +21,14 @@ body{
     width: 100%;
     height: 100%;
     position: absolute;
-    font: 16px/1.5 Tahoma, Arial, "\5b8b\4f53", sans-serif;
+    font: 16px/1.5 Georgia, Arial, "\5b8b\4f53", sans-serif;
+    color: #333;
 }
 .title{
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bold;
-    margin: 0 0 12px 0;
+    margin: 12px 0 20px 0;
+    text-align: center;
 }
 .header{
     background: url(images/header.png) repeat-x;
@@ -41,6 +43,15 @@ body{
     word-wrap: break-word;
     word-break:break-all;
 }
+.article img{
+    max-width: 100%;
+}
+.article a:visited, .article a:link{
+    color: #06c;
+}
+.article a:hover{
+    color: #ff7300;
+}
 .superaddcontent{
     margin-top: 20px;
     font-size: 14px;
@@ -53,4 +64,13 @@ body{
     background-color: #f7f7f7;
     border-radius: 3px;
     margin: 36px 0 12px;
+    color: #999;
+}
+.superaddcontent .stitle a:link, .superaddcontent .stitle a:visited{
+    color: #999;
+    text-decoration: none;
+}
+.superaddcontent .stitle a:hover{
+    color: #ff7300;
+    text-decoration: underline;
 }
