--- a/css/reader.css
+++ b/css/reader.css
@@ -51,7 +51,7 @@ body{
 .jz-article{
     padding-bottom: 30px;
     word-wrap: break-word;
-    word-break: break-all;
+    /* word-break: break-all; */
 }
 .jz-article img{
     max-width: 100%;
