--- a/css/options.css
+++ b/css/options.css
@@ -1,96 +1,113 @@
 ﻿/*Piggy Reader
 author @huntbao*/
-*{
-    padding:0;
-    margin:0;
+* {
+    padding: 0;
+    margin: 0;
 }
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
     width: 8px;
     height: 8px;
 }
-::-webkit-scrollbar-thumb{
-    background-color: #aaa;
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(127, 127, 127, .5);
+    border-radius: 3px;
 }
-::-webkit-scrollbar-thumb:hover{
+
+::-webkit-scrollbar-thumb:hover {
     background-color: #ccc;
 }
+
 ::-webkit-scrollbar-track-piece {
     background-color: #eee;
 }
-::selection {
-    background-color: #06c;
-    color: #fff !important;
-}
-a:visited, a:link{
+
+a:visited, a:link {
     color: #06c;
     text-decoration: none;
 }
-a:hover{
+
+a:hover {
     color: #c00;
     text-decoration: underline;
 }
-body{
+
+body {
     background-color: #fff;
     color: #666;
     font-size: 12px;
-    font-family: "\5FAE\8F6F\96C5\9ED1"/*yahei*/,sans-serif/*for mac*/;
+    font-family: "\5FAE\8F6F\96C5\9ED1" /*yahei*/, sans-serif /*for mac*/;
     overflow: hidden;
 }
-.not-selectable{
+
+.not-selectable {
     -webkit-user-select: none;
     user-select: none;
 }
-.wrapper{
+
+.wrapper {
     width: 672px;
     margin: 30px auto 0;
     overflow: hidden;
 }
-.settings{
+
+.settings {
     width: 652px;
     background-color: #f5f5f5;
     border-radius: 10px;
     margin: 28px auto;
     padding: 10px;
 }
-.settings h2{
+
+.settings h2 {
     font-size: 18px;
     text-align: center;
     border-bottom: 1px dotted #ccc;
     padding-bottom: 10px;
 }
-.content{
+
+.content {
     margin: 0 8px;
 }
-.content li{
+
+.content li {
     overflow: hidden;
     list-style: none;
     margin: 8px 0 30px;
 }
-.content .tiptext{
+
+.content .tiptext {
     margin-bottom: 8px;
 }
-.content .tiptext2{
+
+.content .tiptext2 {
     margin-bottom: 8px;
     color: #888;
 }
-.content label{
+
+.content label {
     display: block;
     margin-bottom: 8px;
 }
-.content label input{
+
+.content label input {
     margin-right: 4px;
     vertical-align: middle;
 }
-.content .optionname{
+
+.content .optionname {
     float: left;
     width: 160px;
     margin-top: 2px;
 }
-.content .optionset{
+
+.content .optionset {
     float: left;
     margin-right: 40px;
 }
-.note-logo{
+
+.note-logo {
     width: 30px;
     height: 30px;
     background-repeat: no-repeat;
@@ -98,15 +115,18 @@ body{
     display: inline-block;
     vertical-align: middle;
 }
+
 .evernote-logo,
-.yinxiang-logo{
+.yinxiang-logo {
     background-image: url(images/evernote.png);
 }
-.saveto-tip{
+
+.saveto-tip {
     margin-left: 160px;
     clear: both;
 }
-.copyright{
+
+.copyright {
     text-align: center;
 }
 
