--- a/css/reader.css
+++ b/css/reader.css
@@ -1,27 +1,29 @@
 ﻿/*Piggy Reader
 author @huntbao*/
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 8px;
     height: 8px;
 }
-::-webkit-scrollbar-thumb{
-    background-color: #aaa;
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(127, 127, 127, .9);
+    border-radius: 3px;
 }
-::-webkit-scrollbar-thumb:hover{
+
+::-webkit-scrollbar-thumb:hover {
     background-color: #ccc;
 }
+
 ::-webkit-scrollbar-track-piece {
     background-color: #eee;
 }
-::selection {
-    background-color:#06c;
-    color:#fff !important;
-}
-html{
+
+html {
     height: 100%;
     color: #333;
 }
-body{
+
+body {
     padding: 0;
     margin: 20px 0;
     width: 100%;
@@ -31,27 +33,32 @@ body{
     background: url(images/itembg.png);
     overflow-x: hidden;
 }
-a:visited, a:link{
+
+a:visited, a:link {
     color: #06c;
     text-decoration: none;
 }
-a:hover{
+
+a:hover {
     color: #c00;
     text-decoration: underline;
 }
-.jz-sider{
+
+.jz-sider {
     position: fixed;
     right: 0;
     top: 12px;
     bottom: 0;
     width: 150px;
 }
+
 .jz-sider.hover .jz-editbtn,
 .jz-sider.hover .jz-printbtn,
-.jz-sider.hover .jz-helpbtn{
+.jz-sider.hover .jz-helpbtn {
     opacity: 1;
 }
-.jz-actionbtn{
+
+.jz-actionbtn {
     width: 24px;
     height: 24px;
     cursor: pointer;
@@ -59,82 +66,101 @@ a:hover{
     margin: 0 0 20px;
     position: absolute;
     right: 20px;
-    padding:4px;
-    background-repeat:no-repeat;
-    background-position:center center;
-    border-radius:1px;
+    padding: 4px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border-radius: 1px;
     -webkit-transition: opacity .18s;
     transition: opacity .18s;
 }
-.jz-actionbtn:hover{
+
+.jz-actionbtn:hover {
     border-color: #ccc;
-    background-color:#fff;
+    background-color: #fff;
 }
-.jz-closebtn{
+
+.jz-closebtn {
     background-image: url(images/close.png);
 }
-.jz-editbtn{
+
+.jz-editbtn {
     background-image: url(images/edit.png);
     top: 60px;
     opacity: 0;
 }
-.jz-printbtn{
+
+.jz-printbtn {
     background-image: url(images/print.png);
     top: 120px;
     opacity: 0;
 }
-.jz-helpbtn{
+
+.jz-helpbtn {
     background-image: url(images/help.png);
     top: 180px;
     opacity: 0;
 }
-.prettyprint{
+
+.prettyprint {
     background-color: #efefef;
     padding: 0 4px !important;
 }
-.jz-title{
+
+.jz-title {
     font-size: 24px;
     font-weight: bold;
     margin: 12px 0 20px 0;
     text-align: center;
 }
-.jz-subtitle{
+
+.jz-subtitle {
     text-align: right;
     font-size: 12px;
     margin-top: -20px;
 }
-.jz-subtitle .author{
+
+.jz-subtitle .author {
     margin-left: 4px;
 }
-.jz-subtitle .date{
+
+.jz-subtitle .date {
     margin-right: 4px;
 }
-.jz-contentwrap{
+
+.jz-contentwrap {
     width: 800px;
     margin: 0 auto;
-    box-shadow: 0px 0px 2px;
     padding: 12px;
     background-color: #fff;
     overflow: hidden;
+    border: 1px solid #d3d3d3;
+    border-bottom-color: #bbb;
+    border-radius: 3px;
+    box-shadow: 0 1px 3px #d3d3d3;
 }
-.jz-article{
+
+.jz-article {
     padding-bottom: 30px;
     word-wrap: break-word;
     overflow: hidden;
 }
-.jz-loading-tip{
-    background:url(images/loading.gif) no-repeat;
+
+.jz-loading-tip {
+    background: url(images/loading.gif) no-repeat;
     padding-left: 40px;
     line-height: 33px;
 }
-.jz-article img{
+
+.jz-article img {
     max-width: 100%;
     display: block;
 }
-.jz-addcontent{
+
+.jz-addcontent {
     margin-top: 20px;
 }
-.jz-stitle{
+
+.jz-stitle {
     font-size: 12px;
     font-family: tahoma;
     padding: 2px 4px;
@@ -142,24 +168,29 @@ a:hover{
     margin: 36px 0 12px;
     color: #999;
 }
-.jz-stitle a:link, .jz-stitle a:visited{
+
+.jz-stitle a:link, .jz-stitle a:visited {
     color: #999;
     text-decoration: none;
 }
-.jz-stitle a:hover{
+
+.jz-stitle a:hover {
     color: #c00;
     text-decoration: underline;
 }
+
 .jz-author .jz-stitle a:link,
-.jz-author .jz-stitle a:visited{
+.jz-author .jz-stitle a:visited {
     color: #f00;
 }
-.jz-pagenum{
+
+.jz-pagenum {
     text-align: right;
     border-top: 1px solid #666;
     padding-top: 4px;
 }
-.jz-modal-backdrop{
+
+.jz-modal-backdrop {
     position: fixed;
     top: 0;
     right: 0;
@@ -169,7 +200,8 @@ a:hover{
     background-color: #000;
     opacity: 0.5;
 }
-.jz-modal{
+
+.jz-modal {
     position: fixed;
     top: 10%;
     left: 50%;
@@ -185,17 +217,20 @@ a:hover{
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
 }
-.jz-modal .jz-modal-hd{
+
+.jz-modal .jz-modal-hd {
     padding: 9px 15px;
     border-bottom: 1px solid #eee;
     background: url(images/32x32.png) no-repeat 9px 9px;
     text-indent: 32px;
 }
-.jz-modal .jz-modal-hd h3{
+
+.jz-modal .jz-modal-hd h3 {
     margin: 0;
     line-height: 30px;
 }
-.jz-modal .jz-modal-hd .close{
+
+.jz-modal .jz-modal-hd .close {
     float: right;
     font-size: 20px !important;
     font-weight: bold !important;
@@ -209,22 +244,26 @@ a:hover{
     margin: 0;
     padding: 0;
 }
-.jz-modal .jz-modal-hd .close:hover{
+
+.jz-modal .jz-modal-hd .close:hover {
     opacity: 0.4;
 }
-.jz-modal .jz-modal-bd{
+
+.jz-modal .jz-modal-bd {
     position: relative;
     max-height: 400px;
     padding: 15px;
     overflow-y: auto;
 }
+
 .jz-highlight-link:link,
-.jz-highlight-link:visited{
+.jz-highlight-link:visited {
     color: #c00;
     text-decoration: underline;
     font-style: italic;
 }
-.jz-clipfailed-tip{
+
+.jz-clipfailed-tip {
     font-style: italic;
     font-size: 14px;
 }
