--- a/css/module.options.css
+++ b/css/module.options.css
@@ -75,6 +75,16 @@ body {
     overflow: hidden;
     list-style: none;
     margin: 8px 0 30px;
+    text-indent: 12px;
+}
+
+.content .sep-line {
+    margin: 12px 0;
+    width: 200px;
+    padding-bottom: 8px;
+    font-size: 16px;
+    font-weight: bold;
+    text-indent: 0px;
 }
 
 .content .tiptext {
@@ -87,8 +97,7 @@ body {
 }
 
 .content label {
-    display: block;
-    margin-bottom: 8px;
+    margin: 0 20px 8px 0;
 }
 
 .content label input {
@@ -107,20 +116,6 @@ body {
     margin-right: 40px;
 }
 
-.note-logo {
-    width: 30px;
-    height: 30px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.evernote-logo,
-.yinxiang-logo {
-    background-image: url(images/evernote.png);
-}
-
 .saveto-tip {
     margin-left: 160px;
     clear: both;
@@ -128,5 +123,18 @@ body {
 
 .copyright {
     text-align: center;
+}
+
+.options-tip {
+    display: none;
+    background-color: #600;
+    padding: 8px;
+    text-align: center;
+    color: #fff;
+    border-radius: 3px;
+    float: left;
+    -moz-transition: opacity .38s;
+    -webkit-transition: opacity .38s;
+    transition: opacity .38s;
 }
 
