--- a/css/module.dictlayer.css
+++ b/css/module.dictlayer.css
@@ -51,6 +51,13 @@ author @huntbao*/
     margin: 20px;
 }
 
+.jz-mod-dict-layer .jz-trans-more {
+    border-top: 1px solid rgba(204, 204, 204, .9);
+    border-bottom: 1px solid rgba(255, 255, 255, .9);
+    width: 50%;
+    margin: 8px 0 4px;
+}
+
 .jz-dict-layer-bottom .jz-arrow {
     top: -2px;
 }
