--- a/css/module.dictlayer.css
+++ b/css/module.dictlayer.css
@@ -55,7 +55,7 @@ author @huntbao*/
     border-top: 1px solid rgba(204, 204, 204, .9);
     border-bottom: 1px solid rgba(255, 255, 255, .9);
     width: 50%;
-    margin: 8px 0 4px;
+    margin: 8px 0;
 }
 
 .jz-dict-layer-bottom .jz-arrow {
