--- a/css/module.reader.css
+++ b/css/module.reader.css
@@ -11,26 +11,16 @@ body {
     margin: 0;
     width: 100%;
     height: 100%;
-    font: 16px/1.5 Georgia, "微软雅黑";
+    font: 18px/1.5 Georgia, "微软雅黑";
     color: #333;
-    background: url(images/itembg.png);
+    text-align: left;
+    background: #a2a749;
     overflow-x: hidden;
 }
 
-body.fiction-theme {
-    color: #333;
-    text-align: left;
-    background: #473624;
-}
-
-body.fiction-theme.chinese-article {
+body.chinese-article {
     font-weight: bold;
     font-family: "楷体_GB2312", "仿宋_GB2312", "宋体";
-    font-size: 20px !important;
-}
-
-body.fiction-theme .jz-contentwrap {
-    background: url(images/contentbg.jpg);
 }
 
 a:visited, a:link {
@@ -51,8 +41,8 @@ a:hover {
     width: 8%;
 }
 
+.jz-sider.hover .jz-closebtn,
 .jz-sider.hover .jz-editbtn,
-.jz-sider.hover .jz-themebtn,
 .jz-sider.hover .jz-printbtn,
 .jz-sider.hover .jz-helpbtn {
     opacity: 1;
@@ -72,6 +62,7 @@ a:hover {
     border-radius: 1px;
     -webkit-transition: opacity .18s;
     transition: opacity .18s;
+    border-radius: 50%;
 }
 
 .jz-actionbtn:hover {
@@ -81,6 +72,8 @@ a:hover {
 
 .jz-closebtn {
     background-image: url(images/close.png);
+    top: 0;
+    opacity: 0;
 }
 
 .jz-editbtn {
@@ -89,21 +82,15 @@ a:hover {
     opacity: 0;
 }
 
-.jz-themebtn {
-    background-image: url(images/theme.png);
-    top: 120px;
-    opacity: 0;
-}
-
 .jz-printbtn {
     background-image: url(images/print.png);
-    top: 180px;
+    top: 120px;
     opacity: 0;
 }
 
 .jz-helpbtn {
     background-image: url(images/help.png);
-    top: 240px;
+    top: 180px;
     opacity: 0;
 }
 
@@ -139,10 +126,8 @@ a:hover {
     padding: 12px;
     background-color: #fff;
     overflow: hidden;
-    border: 1px solid #d3d3d3;
-    border-bottom-color: #bbb;
-    border-radius: 3px;
-    box-shadow: 0 1px 3px #d3d3d3;
+    border: 1px solid #a2a749;
+    box-shadow: 0 0 .5em #000;
 }
 
 .jz-article {
