--- a/css/all.pages.css
+++ b/css/all.pages.css
@@ -1,13 +1,15 @@
 ﻿/*Piggy Reader
 author @huntbao*/
 #jizhureader-iframe {
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    bottom: 0;
+    margin: 0 !important;
+    padding: 0 !important;
+    position: absolute !important;
+    width: 100% !important;
+    max-width: none !important;
+    height: 100% !important;
+    max-height: none !important;
+    top: 0 !important;
+    bottom: 0 !important;
     left: -100%;
     z-index: 2147483647 !important;
 }
