search feature on new tab

--- a/css/module.dictlayer.css
+++ b/css/module.dictlayer.css
@@ -10,6 +10,7 @@ author @huntbao*/
     text-align: left !important;
     color: #000 !important;
     font-size: 14px !important;
+    text-shadow: none !important;
 }
 
 .jz-mod-dict-layer.jz-opacity-ani {
