--- a/css/module.search.css
+++ b/css/module.search.css
@@ -32,7 +32,7 @@ author @huntbao*/
 }
 
 .search-result-wrap {
-    display: flex;
+    display: none;
     margin: 0 auto;
     position: absolute;
     text-align: left;
