--- a/css/module.dictlayer.css
+++ b/css/module.dictlayer.css
@@ -11,6 +11,7 @@ author @huntbao*/
     color: #000 !important;
     font-size: 14px !important;
     text-shadow: none !important;
+    line-height: 22px !important;
 }
 
 .jz-mod-dict-layer.jz-opacity-ani {
