--- a/reader/css/all.pages.css
+++ b/reader/css/all.pages.css
@@ -10,8 +10,29 @@ author @huntbao*/
     max-height: none !important;
     top: 0 !important;
     bottom: 0 !important;
-    left: -100%;
+    left: -100% !important;
     z-index: 2147483647 !important;
+}
+
+#jz-page-lastmodified {
+    position: fixed !important;
+    top: 5px !important;
+    left: 5px !important;
+    padding: 5px !important;
+    border-radius: 3px !important;
+    background-color: #ccc !important;
+    color: #666 !important;
+    z-index: 2147483646 !important;
+    font-family: tahoma !important;
+    font-size: 10px !important;
+    opacity: 0 !important;
+    cursor: default !important;
+    line-height: 10px !important;
+    transition: ease all .5s !important;
+}
+
+#jz-page-lastmodified:hover {
+    opacity: 1 !important;
 }
 
 html.jizhureader-beforereader,
