--- a/reader/css/module.reader.css
+++ b/reader/css/module.reader.css
@@ -270,7 +270,7 @@ a:hover {
     font-size: 14px;
 }
 
-address, blockquote, sup {
+.zm-editable-content blockquote {
     border-left: 3px solid rgba(20, 149, 242, 0.6);
     padding: 0 0 0 1.5em;
 }
